--- a/style.css
+++ b/style.css
@@ -9,14 +9,14 @@ body {
   background-color: #dff1e7;
   display: grid;
   place-items: center;
-  min-height: 100vh;
+  min-height: 90vh;
 }
 body main {
   background-color: white;
   width: 90vw;
   border-radius: 15px;
   padding: 25px;
-  height: 90vh;
+  margin: 30px 0;
 }
 body main form {
   display: flex;
