--- a/style.css
+++ b/style.css
@@ -26,6 +26,18 @@ body main form {
 body main form h1 {
   color: #2b4246;
 }
+body main form div.name {
+  display: flex;
+  gap: 10px;
+}
+body main form div.name div.first-name,
+body main form div.name div.last-name {
+  flex: 1;
+}
+body main form div.name div.first-name input,
+body main form div.name div.last-name input {
+  width: 100%;
+}
 body main form .first-name,
 body main form .last-name,
 body main form .email-address,
@@ -153,7 +165,8 @@ body main form button[type=submit] {
     display: flex;
     flex-direction: row;
   }
-  fieldset.query-type div.general, fieldset.query-type div.support {
+  fieldset.query-type div.general,
+  fieldset.query-type div.support {
     flex: 1;
   }
 }
