--- a/style.scss
+++ b/style.scss
@@ -162,6 +162,7 @@ body {
     @media screen and (min-width: 768px) {
         div.name {
             display: flex;
+            flex-direction: row;
             gap: 10px;
 
             div.first-name,
